--- a/public/style.css
+++ b/public/style.css
@@ -84,14 +84,14 @@ a {
 
 #posts {
     /* border: solid 5px orange; */
-    flex-grow: 2;
+    /* flex-grow: 2; */
     background-color: rgb(243, 243, 243);
     color: rgb(23, 23, 77);
     text-align: center;
 }
 
 #new-posts {
-    border: solid 5px yellow;
+    /* border: solid 5px yellow; */
     flex-grow: 1;
     text-align: center;
 }
@@ -121,10 +121,25 @@ a {
 }
 
 .field{
-    /* background-color: blanchedalmond; */
+    background-color: blanchedalmond;
 }
 
-.input{
+input{
     text-align: center;
     /* border: solid 2px grey; */
+}
+
+button{
+    background: none;
+	color: inherit;
+	border: none;
+	padding: 0;
+	font: inherit;
+	cursor: pointer;
+	outline: inherit;
+}
+
+#search-bar-container{
+    display: flex;
+    flex-direction: column;
 }
